--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -27,6 +27,7 @@ li{
     @include fontDef($secondaryFont, 2rem ,400 ,3.2rem ,1.1px);
     color: $primaryColor;
     text-align: center;
+    list-style: none;
     a{
         text-decoration: none;
         color: $primaryColor;
